# flask-gateway-demo

./: README.md  main.py  pyproject.toml  simple-http-server-gateway.py
static/: index.html
